Subscribe section button fixed on mobile

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -2785,6 +2785,10 @@ iframe{
 
     }
 
+    .subscribe-btn {
+        margin-top: 0.3rem;
+    }
+
     .healwithlove p{
 
         padding: 3px 9px;
